--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,20 +5,105 @@ body {
 p {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    line-height: 138%;
+    line-height: 175%;
+    font-size: 16px;
 }
 
-h1 h2 h3 h4 h5 h6 {
-    font-family: 'Georgia', 'Times New Roman', Times, serif
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
+    margin: 16px 16px 16px 16px;
 }
 
-#top-bar {
-    /* height: 300px; */
+/* h2 {
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
+    margin: 16px 16px 16px 16px;
+} */
+
+#header-bar {
+    position: relative;
+    margin: 0px 0px 0px 0px;
+    top: -8px;
+    background-color: #fff;
+    border: 1px solid #cccccc;
+    /* overflow: auto; */
+}
+
+#center-bar {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: auto;
+}
+
+#element-1 {
+    background-color: #4aaaa5;
+    color: #fff;
     float: left;
 }
 
-#name {
-    background-color: #4aaaa5;
-    color: #fff;
-    /* float: left; */
+#element-2 {
+    /* background-color: green; */
+    float: right;
+    }
+
+#element-3 {
+    /* background-color: orange; */
+    float: right;
+}
+
+#element-4 {
+    /* background-color: blue; */
+    float: right;
+}
+
+#about-me {
+    color: #4aaaa5;
+}
+
+.main-content  {
+    background-color: #fff;
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #dddddd;
+    /* overflow: auto; */
+}
+
+.button {
+    padding: 20px 20px 20px 20px;
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 150%;
+    font-size: 16px;
+    /* text-decoration: none; */
+}
+
+a:link {
+    text-decoration: none;
+    color: #777777;
+}
+
+a:active {
+    text-decoration: none;
+    color: #777777;
+}
+
+a:visited {
+    text-decoration: none;
+    color: #777777;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #4aaaa5;
+}
+
+#profile-img {
+    width: 200px;
+    float: left;
+    margin: 0px 16px 0px 16px;
+}
+
+.text-margins {
+    margin: 16px 16px 16px 16px;
 }
