--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,19 @@
 body {
-    background-image: url(../images/light-grey-terrazzo.png)
-}
-
-p {
+    background-image: url(../images/light-grey-terrazzo.png);
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 175%;
     font-size: 16px;
+    text-align: justify;
 }
+
+/* p {
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 175%;
+    font-size: 16px;
+    text-align: justify;
+} */
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Georgia', 'Times New Roman', Times, serif;
@@ -56,7 +62,7 @@ h1, h2, h3, h4, h5, h6 {
     float: right;
 }
 
-#about-me {
+.teal-heading {
     color: #4aaaa5;
 }
 
@@ -101,9 +107,45 @@ a:hover {
 #profile-img {
     width: 200px;
     float: left;
-    margin: 0px 16px 0px 16px;
+    margin: 6px 16px 0px 16px;
 }
 
 .text-margins {
     margin: 16px 16px 16px 16px;
+}
+
+hr {
+    height: 2.5px;
+    color: #cccccc;
+    background-color: #cccccc;
+    margin: 16px 16px 16px 16px;
+    border: 0px solid #cccccc;
+}
+
+input {
+    /* overflow: auto; */
+    /* color: #ffffff; */
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    /* line-height: 175%; */
+    font-size: 16px;
+    width: 926px;
+    /* border-color: #cccccc; */
+}
+
+.message-field {
+    width: 926px;
+    height: 300px;
+    padding: 1px 0px 1px 0px;
+}
+
+::placeholder {
+    color: #d9d9d9;
+    /* opacity: 6; */
+}
+
+button {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    border: 1px solid #4aaaa5;
+    padding: 5px 15px 5px 15px;
 }
