last commit - added TODOs to the README

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,8 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #4aaaa5;
     color: #fff;
     float: left;
+    height: 65px;
+    /* overflow: auto; */
 }
 
 #element-2 {
