--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,23 +7,10 @@ body {
     text-align: justify;
 }
 
-/* p {
-    color: #777777;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    line-height: 175%;
-    font-size: 16px;
-    text-align: justify;
-} */
-
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     margin: 16px 16px 16px 16px;
 }
-
-/* h2 {
-    font-family: 'Georgia', 'Times New Roman', Times, serif;
-    margin: 16px 16px 16px 16px;
-} */
 
 #header-bar {
     position: relative;
@@ -159,33 +146,35 @@ button {
     overflow: auto;
 }
 
-.gallery-btn {
-    background-color: #4aaaa5;
-    color: #ffffff;
-    border: 1px solid #4aaaa5;
-    width: 286px;
-    /* float: left; */
-    margin: 6px 16px 36px 16px;
-    text-align: center;
-    /* padding-top: 15px; */
+.tile {
+    position: relative;
+    float: left;
+    margin: 3px 16px 16px 16px;
+    width: 288px;
+  }
+  
+  /* Make the image responsive */
+  .tile img {
+    width: 100%;
+    height: auto;
+  }
+  
+  /* Style the button and place it in the middle of the container/image */
+  .tile .btn {
     position: absolute;
-    top: 50%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.container {
-    position: relative;
-    /* text-align: center;
-    color: white; */
-}
-
-/* #tile-1 {
-    position: absolute;
-    left: 976px;
-}
-
-#tile-2 {
-    position: absolute;
-    left: 32px;
-} */
+    -ms-transform: translate(-50%, -50%);
+    background-color: #4aaaa5;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .tile .btn:hover {
+    background-color: #71c1bd;
+  }
