--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,3 +178,19 @@ button {
   .tile .btn:hover {
     background-color: #71c1bd;
   }
+
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #4aaaa5;
+    color: white;
+    text-align: center;
+}
+
+#copyright {
+    font-size: 16px;
+    margin: 10px 0px 10px 0px;
+    color: #fff;
+}
